--- a/ExerciseXData/Views/Foods/Edit.cshtml
+++ b/ExerciseXData/Views/Foods/Edit.cshtml
@@ -1,1 +1,82 @@
-﻿
+﻿ @model ExerciseXData_ExerciseLibrary.Models.ExercisesModel
+
+@{
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
+}
+
+<form method="post">
+    <div class=" border p-3 mt-4">
+        <div class=" row pb-2">
+            <h1 class="text-primary">Edit Exercise</h1>
+            <hr />
+        </div>
+
+        @Html.HiddenFor(model => model.E_Id)
+        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
+        <div class="mb-3">
+            <label asp-for="CategoriesC_Id"></label>
+            <input asp-for="CategoriesC_Id" class="form-control" />
+            <span asp-validation-for="CategoriesC_Id" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Name"></label>
+            <input asp-for="E_Name" class="form-control" />
+            <span asp-validation-for="E_Name" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Image"></label>
+            <input asp-for="E_Image" class="form-control" />
+            <span asp-validation-for="E_Image" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Description"></label>
+            <input asp-for="E_Description" class="form-control" />
+            <span asp-validation-for="E_Description" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="E_Pros_1"></label>
+            <input asp-for="E_Pros_1" class="form-control" />
+            <span asp-validation-for="E_Pros_1" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Pros_2"></label>
+            <input asp-for="E_Pros_2" class="form-control" />
+            <span asp-validation-for="E_Pros_2" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Pros_3"></label>
+            <input asp-for="E_Pros_3" class="form-control" />
+            <span asp-validation-for="E_Pros_3" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Cons_1"></label>
+            <input asp-for="E_Cons_1" class="form-control" />
+            <span asp-validation-for="E_Cons_1" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Cons_2"></label>
+            <input asp-for="E_Cons_2" class="form-control" />
+            <span asp-validation-for="E_Cons_2" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="E_Cons_3"></label>
+            <input asp-for="E_Cons_3" class="form-control" />
+            <span asp-validation-for="E_Cons_3" class="text-danger"></span>
+        </div>
+        <div>
+            <label for="E_Modified_Date">Modified Date</label>
+            <input asp-for="E_Modified_Date" type="datetime-local" />
+        </div>
+
+        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
+        <a asp-controller="Exercises" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+    </div>
+</form>
+
+@section Scripts {
+    @*this part is responsible for the client side*@
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
