--- a/ExerciseXData/Views/Diets/Delete.cshtml
+++ b/ExerciseXData/Views/Diets/Delete.cshtml
@@ -1,1 +1,71 @@
-﻿
+﻿ @model ExerciseXData_DietLibrary.Models.DietsModel
+
+@{
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
+}
+
+<form method="post" asp-action="DeleteSuccess" asp-route-id="@Model.D_Id">
+    @*DeletePOST here can change name with the CategoryController POST method*@
+    <input asp-for="D_Id" hidden />
+    <div class=" border p-3 mt-4">
+        <div class=" row pb-2">
+            <h1 class="text-primary">Delete Food</h1>
+            <hr />
+        </div>
+        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
+
+        <div class="mb-3">
+            <label asp-for="D_Name"></label>
+            <input asp-for="D_Name" disabled class="form-control" />
+
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="D_Description"></label>
+            <input asp-for="D_Description" disabled class="form-control" />
+
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="D_Pros_1"></label>
+            <input asp-for="D_Pros_1" disabled class="form-control" />
+
+        </div>
+        <div class="mb-3">
+            <label asp-for="D_Pros_2"></label>
+            <input asp-for="D_Pros_2" disabled class="form-control" />
+
+        </div>
+        <div class="mb-3">
+            <label asp-for="D_Pros_3"></label>
+            <input asp-for="D_Pros_3" disabled class="form-control" />
+
+        </div>
+        <div class="mb-3">
+            <label asp-for="D_Cons_1"></label>
+            <input asp-for="D_Cons_1" disabled class="form-control" />
+
+        </div>
+        <div class="mb-3">
+            <label asp-for="D_Cons_2"></label>
+            <input asp-for="D_Cons_2" disabled class="form-control" />
+
+        </div>
+        <div class="mb-3">
+            <label asp-for="D_Cons_3"></label>
+            <input asp-for="D_Cons_3" disabled class="form-control" />
+
+        </div>
+
+
+        <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
+        <a asp-controller="Diets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+    </div>
+</form>
+
+@section Scripts {
+    @*this part is responsible for the client side*@
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
