--- a/ExerciseXData/Views/Foods/Delete.cshtml
+++ b/ExerciseXData/Views/Foods/Delete.cshtml
@@ -1,73 +1,45 @@
-﻿ @model ExerciseXData_ExerciseLibrary.Models.ExercisesModel
+﻿ @model ExerciseXData_DietLibrary.Models.FoodsModel
 
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 
-<form method="post" asp-action="DeleteSuccess" asp-route-id="@Model.E_Id">
+<form method="post" asp-action="DeleteSuccess" asp-route-id="@Model.F_Id">
     @*DeletePOST here can change name with the CategoryController POST method*@
-    <input asp-for="E_Id" hidden />
+    <input asp-for="F_Id" hidden />
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
-            <h1 class="text-primary">Delete Exercise</h1>
+            <h1 class="text-primary">Delete Food</h1>
             <hr />
         </div>
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
 
         <div class="mb-3">
-            <label asp-for="CategoriesC_Id"></label>
-            <input asp-for="CategoriesC_Id" disabled class="form-control" />
+            <label asp-for="F_Image"></label>
+            <input asp-for="F_Image" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="E_Name"></label>
-            <input asp-for="E_Name" disabled class="form-control" />
-
-        </div>
-        <div class="mb-3">
-            <label asp-for="E_Image"></label>
-            <input asp-for="E_Image" disabled class="form-control" />
+            <label asp-for="F_Name"></label>
+            <input asp-for="F_Name" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="E_Description"></label>
-            <input asp-for="E_Description" disabled class="form-control" />
+            <label asp-for="F_Group"></label>
+            <input asp-for="F_Group" disabled class="form-control" />
 
         </div>
         <div class="mb-3">
-            <label asp-for="E_Pros_1"></label>
-            <input asp-for="E_Pros_1" disabled class="form-control" />
+            <label asp-for="F_Calories"></label>
+            <input asp-for="F_Calories" disabled class="form-control" />
 
         </div>
-        <div class="mb-3">
-            <label asp-for="E_Pros_2"></label>
-            <input asp-for="E_Pros_2" disabled class="form-control" />
-
-        </div>
-        <div class="mb-3">
-            <label asp-for="E_Pros_3"></label>
-            <input asp-for="E_Pros_3" disabled class="form-control" />
-
-        </div>
-        <div class="mb-3">
-            <label asp-for="E_Cons_1"></label>
-            <input asp-for="E_Cons_1" disabled class="form-control" />
-
-        </div>
-        <div class="mb-3">
-            <label asp-for="E_Cons_2"></label>
-            <input asp-for="E_Cons_2" disabled class="form-control" />
-
-        </div>
-        <div class="mb-3">
-            <label asp-for="E_Cons_3"></label>
-            <input asp-for="E_Cons_3" disabled class="form-control" />
-
-        </div>
+        
+        
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Exercises" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Foods" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
