admin Diet views are fully funtional, seeded data for diets, foods and diets foods

--- a/ExerciseXData/Views/Diets/Create.cshtml
+++ b/ExerciseXData/Views/Diets/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ExerciseXData_DietLibrary.Models.DietsModel
+﻿@model ExerciseXData_DietLibrary.DataTransferObject.CreateDietDto
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
