--- a/ExerciseXData/Views/Exercises/Index.cshtml
+++ b/ExerciseXData/Views/Exercises/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@* @model List<ExerciseXData_ExerciseLibrary.Models.ExercisesModel>
- *@
-@using ExerciseXData_ExerciseLibrary.DataTransferObject
-@model ExerciseIndexViewModel
+﻿@model ExerciseXData_ExerciseLibrary.DataTransferObject.ExerciseIndexDto
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
