--- a/ExerciseXData/Views/Diets/Edit.cshtml
+++ b/ExerciseXData/Views/Diets/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿ @model ExerciseXData_DietLibrary.Models.DietsModel
+﻿ @model ExerciseXData_DietLibrary.DataTransferObject.EditDietDto
 
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
