--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -25,6 +25,8 @@
                 <input asp-for="RememberMe" class="form-check-input" type="checkbox" />
                 <label asp-for="RememberMe" class="form-check-label"></label>
             </div>
+
+            <button type="submit" class="btn btn-primary">Forgot Password</button>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
