--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="About">ExercisesXData</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="About">ExerciseXData</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" 
                 aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,72 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Home</a>
                         </li>
-                      @*   <li class="nav-item">
+
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <!-- Admin-only links -->
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Manage Categories</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Exercises" asp-action="Index">Manage Exercises</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Diets" asp-action="Index">Manage Diets</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Foods" asp-action="Index">Manage Foods</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage Users</a>
+                            </li>
+                        }
+
+                        @if (User.IsInRole("User"))
+                        {
+                            <!-- User-only links -->
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Diets" asp-action="MyPlans">My Diet Plans</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Exercises" asp-action="MyPlans">My Exercise Plans</a>
+                            </li>
+                        }
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                Statistics
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-controller="Statistics" asp-action="Diets">Diets</a>
+                                <a class="dropdown-item" asp-controller="Statistics" asp-action="Exercises">Exercises</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <div class="ms-auto">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <span class="navbar-text me-3">Welcome, @User.Identity.Name!</span>
+                            <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                <button type="submit" class="btn btn-primary">Log Out</button>
+                            </form>
+                        }
+                        else
+                        {
+                            <a class="btn btn-primary me-2" asp-controller="Account" asp-action="Register">Sign In</a>
+                            <a class="btn btn-primary" asp-controller="Account" asp-action="Login">Log In</a>
+                        }
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+                        @* <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Home</a>
+                        </li> *@
+    @*                      <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +101,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Foods" asp-action="Index">Food</a>
-                        </li> *@
+                        </li>  *@
 
                         @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UsersExercises" asp-action="Index">UsersExercises</a>
@@ -50,7 +115,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="DietsFoods" asp-action="Index">DietsFoods</a>
                         </li> *@
 
-                        <li class="nav-item dropdown">
+                        @* <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">Statistics
                             </a>
@@ -63,32 +128,26 @@
                         </li>
 
                        
-                        @* <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-controller="Home" asp-action="LogOut">Log Out</a>
-                        </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  asp-controller="Home" asp-action="About">Log Out</a>
+                        </li> 
                     </ul>
                     <div class="ms-auto">
                         <a class="btn btn-primary"  asp-controller="Account" asp-action="Register">Sign In</a>
                     </div>
-                    
                     <div class="ms-auto">
-                        <a class="btn btn-primary"  asp-controller="Account" asp-action="Login">Log In</a>
+                        <a class="btn btn-primary" asp-controller="Account" asp-action="Login">Log In</a>
+                    </div>
+                    <div class="ms-auto">
+                        <a class="btn btn-primary"  asp-controller="Users" asp-action="Logout">Log Out</a>
                     </div>
 
 
-                   @*  <div class="ms-auto">
-
-                    <div class="ms-auto">
-                        <a class="btn btn-primary" asp-controller="Admin" asp-action="Logout">Log Out</a>
-                    </div>
-                    @* <div class="ms-auto">
-
-                        <a class="btn btn-primary" asp-controller="Account" asp-action="UserDashboard">UserDashboard</a>
-                    </div> *@
                 </div>
             </div>
         </nav>
-    </header>
+    </header> *@
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
