--- a/ExerciseXData/Views/Admin/_AdminLayout.cshtml
+++ b/ExerciseXData/Views/Admin/_AdminLayout.cshtml
@@ -71,7 +71,9 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <span class="navbar-text me-3">Welcome, @User.Identity.Name!</span>
-                            <a class="btn btn-primary" asp-controller="Account" asp-action="Logout">Log Out</a>
+                            <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                <button type="submit" class="btn btn-primary">Log Out</button>
+                            </form>
                         }
                         else
                         {
