Fixed login/logout issue between admin and user, also added a layout

--- a/ExerciseXData/Views/Admin/_AdminLayout.cshtml
+++ b/ExerciseXData/Views/Admin/_AdminLayout.cshtml
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="ms-auto">
-                        <form method="post" asp-controller="Admin" asp-action="Logout" style="display:inline;">
+                        <form method="post" asp-controller="Admin" asp-action="AdminLogout" style="display:inline;">
                             @Html.AntiForgeryToken()
                             <button type="submit" class="btn btn-primary">Log Out</button>
                         </form>
