--- a/ExerciseXData/Views/_ViewStart.cshtml
+++ b/ExerciseXData/Views/_ViewStart.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Assuming your existing layout is called _Layout.cshtml
+    Layout = "~/Views/Shared/_BeforeLoginLayout.cshtml"; // Assuming your existing layout is called _Layout.cshtml
     
 }
