--- a/ExerciseXData/Views/Account/Register.cshtml
+++ b/ExerciseXData/Views/Account/Register.cshtml
@@ -34,7 +34,7 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <select asp-for="Gender" class="form-control">
                     <option value="Male">Male</option>
@@ -42,7 +42,7 @@
                     <option value="PreferNotToSay">Prefer not to say</option>
                 </select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
-            </div>
+            </div> *@
             <br />
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
@@ -62,7 +62,7 @@
                 <span asp-validation-for="Weight" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label asp-for="FitnessGoal" class="control-label"></label>
                 <select asp-for="FitnessGoal" class="form-control">
                     @foreach (var goal in Enum.GetValues(typeof(ExerciseXData_SharedLibrary.Enum.FitnessGoal)))
@@ -82,7 +82,7 @@
                     }
                 </select>
                 <span asp-validation-for="U_ActivityLevel" class="text-danger"></span>
-            </div>
+            </div> *@
             <br />
 
             <!-- Dietary Preferences -->
@@ -111,8 +111,8 @@
                 }
             </div>
             <br />
-            <!-- Sleep Patterns -->
-            <div class="form-group">
+            
+            @* <div class="form-group">
                 <label asp-for="SleepPatterns" class="control-label"></label>
                 <select asp-for="SleepPatterns" class="form-control">
                     @foreach (var pattern in Enum.GetValues(typeof(ExerciseXData_SharedLibrary.Enum.SleepPattern)))
@@ -121,7 +121,7 @@
                     }
                 </select>
                 <span asp-validation-for="SleepPatterns" class="text-danger"></span>
-            </div>
+            </div> *@
             <br />
 
             <!-- Consent to Data Collection -->
