UsersDiets CRUD views works currently

--- a/ExerciseXData/Views/Diets/Index.cshtml
+++ b/ExerciseXData/Views/Diets/Index.cshtml
@@ -43,7 +43,7 @@
                 <td>@diets.D_Cons_1</td>
                 <td>@diets.D_Cons_2</td>
                 <td>@diets.D_Cons_3</td>
-                <td>@diets.D_Modified_Date</td>
+                <td>@diets.D_ModifiedDate</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="Diets" asp-action="Edit" asp-route-id="@diets.D_Id"
