Currently no errors, working on models and their relationships

--- a/ExerciseXData/Views/Account/Register.cshtml
+++ b/ExerciseXData/Views/Account/Register.cshtml
@@ -98,7 +98,7 @@
             </div>
             <br />
             <!-- Health Conditions (Checkboxes) -->
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label>Health Conditions</label><br>
                 @foreach (var condition in Enum.GetValues(typeof(ExerciseXData_SharedLibrary.Enum.HealthCondition)).Cast<ExerciseXData_SharedLibrary.Enum.HealthCondition>())
                 {
@@ -110,7 +110,7 @@
                     <br>
                 }
             </div>
-            <br />
+            <br /> *@
             
             @* <div class="form-group">
                 <label asp-for="SleepPatterns" class="control-label"></label>
