--- a/ExerciseXData/Views/Categories/Edit.cshtml
+++ b/ExerciseXData/Views/Categories/Edit.cshtml
@@ -26,7 +26,7 @@
 
         <div>
             <label for="C_Modified_Date">Modified Date</label>
-            <input asp-for="C_Modified_Date" type="datetime-local" />
+            <input asp-for="C_ModifiedDate" type="datetime-local" />
         </div>
 
         <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
