--- a/ExerciseXData/Views/Users/Index.cshtml
+++ b/ExerciseXData/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ExerciseXData_UserLibrary.Models.UsersModel>
+﻿@* @model List<ExerciseXData_UserLibrary.Models.UsersModel>
 
 <h1>Registered Users</h1>
 
@@ -26,3 +26,4 @@
         }
     </tbody>
 </table>
+ *@
