--- a/ExerciseXData/Views/UsersDiets/Edit.cshtml
+++ b/ExerciseXData/Views/UsersDiets/Edit.cshtml
@@ -1,6 +1,10 @@
 ﻿@model ExerciseXData_DietLibrary.DataTransferObject.UsersDietsCreateEditDto
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@{
     ViewData["Title"] = "Edit User Diet";
 }
 
