--- a/ExerciseXData/Views/UsersDiets/Index.cshtml
+++ b/ExerciseXData/Views/UsersDiets/Index.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 } *@
 
-@model IEnumerable<ExerciseXData_DietLibrary.DataTransferObject.UsersDietsIndexDto>
+@model IEnumerable<ExerciseXData_SharedLibrary.Dto.UsersDietsIndexDto>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
