--- a/ExerciseXData/Views/Admin/Manage.cshtml
+++ b/ExerciseXData/Views/Admin/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ExerciseXData_ExerciseLibrary.Models
 @model IEnumerable<CategoriesModel>
 
-<h2>Manage Categories</h2>
+@* <h2>Manage Categories</h2>
 
 
 <table class="table">
@@ -15,9 +15,9 @@
     <tbody>
         @foreach (var category in Model)
         {
-            <tr>
+            <tr> *@
                 @* Convert the byte[] image to a base64 string *@
-                <td>
+@*                 <td>
                     @if (category.C_Image != null && category.C_Image.Length > 0)
                     {
                         <img src="data:image/png;base64,@Convert.ToBase64String(category.C_Image)" alt="Category Image" width="100" height="100" />
@@ -32,4 +32,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table> *@
