--- a/ExerciseXData/Views/Categories/Index.cshtml
+++ b/ExerciseXData/Views/Categories/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>@category.C_Id</td>
                 <td>@category.C_Image</td>
                 <td>@category.C_Name</td>
-                <td>@category.C_Modified_Date</td>
+                <td>@category.C_ModifiedDate</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="Categories" asp-action="Edit" asp-route-id="@category.C_Id"
