--- a/ExerciseXData/Views/UsersDiets/Create.cshtml
+++ b/ExerciseXData/Views/UsersDiets/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ExerciseXData_DietLibrary.DataTransferObject.UsersDietsCreateEditDto
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @{
