--- a/ExerciseXData/Views/UsersDiets/Delete.cshtml
+++ b/ExerciseXData/Views/UsersDiets/Delete.cshtml
@@ -1,4 +1,8 @@
-﻿@model ExerciseXData_DietLibrary.DataTransferObject.UsersDietsIndexDto
+﻿@model ExerciseXData_SharedLibrary.Dto.UsersDietsIndexDto
+
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 @{
     ViewData["Title"] = "Delete User Diet";
@@ -8,19 +12,40 @@
 
 <div>
     <h4>Are you sure you want to delete this entry?</h4>
-    <dl class="row">
-        <dt class="col-sm-2">User</dt>
-        <dd class="col-sm-10">@Model.UserName</dd>
-        <dt class="col-sm-2">Diet</dt>
-        <dd class="col-sm-10">@Model.DietName</dd>
-        <dt class="col-sm-2">Custom Diet Name</dt>
-        <dd class="col-sm-10">@Model.CustomDietName</dd>
-        <dt class="col-sm-2">Serving Size</dt>
-        <dd class="col-sm-10">@Model.UD_ServingSize</dd>
-        <dt class="col-sm-2">Frequency</dt>
-        <dd class="col-sm-10">@Model.UD_Frequency</dd>
-    </dl>
-</div>
+    <div>
+        <dl class="row">
+            <dt class="col-sm-2">User Name</dt>
+            <dd class="col-sm-10">@Model.UserName</dd>
+
+            <dt class="col-sm-2">Diet Name</dt>
+            <dd class="col-sm-10">@Model.DietName</dd>
+
+            <dt class="col-sm-2">Custom Diet Name</dt>
+            <dd class="col-sm-10">@Model.CustomDietName</dd>
+
+            <dt class="col-sm-2">Custom Diet Name</dt>
+            <dd class="col-sm-10">@Model.CustomDietName</dd>
+
+            <dt class="col-sm-2">Custom Diet Name</dt>
+            <dd class="col-sm-10">@Model.UD_ServingSize</dd>
+
+            <dt class="col-sm-2">Custom Diet Name</dt>
+            <dd class="col-sm-10">@Model.UD_Frequency</dd>
+
+            <dt class="col-sm-2">Custom Diet Name</dt>
+            <dd class="col-sm-10">@Model.UD_TotalCalories</dd>
+
+            <dt class="col-sm-2">Start Date</dt>
+            <dd class="col-sm-10">@Model.StartDate.ToShortDateString()</dd>
+
+            <dt class="col-sm-2">End Date</dt>
+            <dd class="col-sm-10">@Model.EndDate.ToShortDateString()</dd>
+
+            <dt class="col-sm-2">Completed</dt>
+            <dd class="col-sm-10">@Model.IsCompleted</dd>
+            
+        </dl>
+    </div>
 
 <form asp-action="DeleteConfirmed">
     <input type="hidden" asp-for="UD_Id" />
