added security question views, models, and controller

--- a/ExerciseXData/Views/Account/ForgotPassword.cshtml
+++ b/ExerciseXData/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,8 @@
-﻿<form method="post">
+﻿@{
+    Layout = Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<form method="post">
     <label for="email">Enter your email:</label>
     <input type="email" id="email" name="email" required />
     <button type="submit">Submit</button>
