Comment out SecurityQuestions for testing features

--- a/ExerciseXData/Views/Account/SecurityQuestions.cshtml
+++ b/ExerciseXData/Views/Account/SecurityQuestions.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExerciseXData_UserLibrary.DataTransferObject.SecurityQuestionDto
+﻿@*
+@model ExerciseXData_UserLibrary.DataTransferObject.SecurityQuestionDto
 
 @{
     Layout = Layout = "~/Views/Shared/_Layout.cshtml";
@@ -32,7 +33,7 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
+*@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
