Adjust naming in the following files: - AccountController.cs - Login.cshtml
Added Dto and scripts in the following files:
- ForgotPassword.cshtml

--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -30,7 +30,8 @@
           
             <div class="d-flex gap-2">
                 <!-- Adds spacing between buttons -->
-                <button type="button" class="btn btn-link">Forgot Password</button>
+                <a asp-controller="Account" asp-action="ForgotPassword" class="btn btn-link">Forgot Password</a>
+
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
