--- a/ExerciseXData/Views/Account/ForgotPassword.cshtml
+++ b/ExerciseXData/Views/Account/ForgotPassword.cshtml
@@ -1,9 +1,17 @@
-﻿@{
-    Layout = Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@model ExerciseXData_UserLibrary.DataTransferObject.ResetPasswordDto;
+
+
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <form method="post">
     <label for="email">Enter your email:</label>
-    <input type="email" id="email" name="email" required />
+    <input type="email" id="email" asp-for="Email" required />
     <button type="submit">Submit</button>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
